--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Sara Yohannes' resume</title>
+    <!--link icon for the tab-->
     <link rel="stylesheet" href="frontstylesheet.css" />
 </head>
 <body>
