--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -4,16 +4,23 @@
 <head>
     <meta charset="utf-8" />
     <title>Sara Yohannes' resume</title>
-    <!--link icon for the tab-->
+    <!--TODO:link icon for the tab-->
     <link rel="stylesheet" href="frontstylesheet.css" />
 </head>
 <body>
-<!-- banner -->
+    <!-- banner -->
     <!-- left and right border with information -->
     <!-- upper middle box with information about me -->
     <!-- lower middle box with information about schooling and experience and projects -->
-<!-- project banner -->
+    <!-- project banner -->
     <!-- list of projects with links to github and project sites -->
     <!-- summarization of contact information -->
+
+    <h1>SARA YOHANNES</h1>
+    <!--TODO:add banner-->
+    <h2>kontaktinformasjon</h2>
+    <h2>litt om meg</h2>
+    <h2>utdanning og relevant erfaring</h2>
+    <h2>github prosjekter</h2>
 </body>
 </html>
