--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -19,8 +19,13 @@
     <h1>SARA YOHANNES</h1>
     <!--TODO:add banner-->
     <h2>kontaktinformasjon</h2>
+    <p>sånn kan jeg du få kontakt med meg</p>
     <h2>litt om meg</h2>
+    <p>litt om meg som ikke er om utdanning eller tidligere erfaringer</p>
     <h2>utdanning og relevant erfaring</h2>
+    <p>Bachelor</p>
     <h2>github prosjekter</h2>
+    <p_projectDescription_right>prosjektbeskrivelse 1</p_projectDescription_right>
+    <p_projectDescription_left>prosjektbeskrivelse 2</p_projectDescription_left>
 </body>
 </html>
