--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -25,7 +25,7 @@
     <h2>utdanning og relevant erfaring</h2>
     <p>Bachelor</p>
     <h2>github prosjekter</h2>
-    <p_projectDescription_right>prosjektbeskrivelse 1</p_projectDescription_right>
+    <p_projectDescription_right>prosjektbeskrivelse 1</p_projectDescription_right><br/>
     <p_projectDescription_left>prosjektbeskrivelse 2</p_projectDescription_left>
 </body>
 </html>
