added flex container
to css and added it to html file for testing

--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -16,16 +16,29 @@
     <!-- list of projects with links to github and project sites -->
     <!-- summarization of contact information -->
 
-    <h1>SARA YOHANNES</h1>
-    <!--TODO:add banner-->
-    <h2>kontaktinformasjon</h2>
-    <p>sånn kan jeg du få kontakt med meg</p>
-    <h2>litt om meg</h2>
-    <p>litt om meg som ikke er om utdanning eller tidligere erfaringer</p>
-    <h2>utdanning og relevant erfaring</h2>
-    <p>Bachelor</p>
-    <h2>github prosjekter</h2>
-    <p_projectDescription_right>prosjektbeskrivelse 1</p_projectDescription_right><br />
-    <p_projectDescription_left>prosjektbeskrivelse 2</p_projectDescription_left>
+    <!--banner-->
+    <div class="flex-container">
+      <h1>SARA YOHANNES</h1>
+    </div>
+    <!--columns-->
+    <div class="flex-container">
+        <div>
+          <h2>kontaktinformasjon</h2>
+          <p>sånn kan jeg du få kontakt med meg</p>
+        </div>
+        <div>
+          <h2>litt om meg</h2>
+          <p>litt om meg som ikke er om utdanning eller tidligere erfaringer</p>
+        </div>
+        <div>
+          <h2>utdanning og relevant erfaring</h2>
+          <p>Bachelor</p>
+        </div>      
+        <div>
+          <h2>github prosjekter</h2>
+          <p_projectDescription_right>prosjektbeskrivelse 1</p_projectDescription_right><br />
+          <p_projectDescription_left>prosjektbeskrivelse 2</p_projectDescription_left>
+        </div>
+    </div>
 </body>
 </html>
