--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -34,9 +34,10 @@
           <h2>utdanning og relevant erfaring</h2>
           <p>Bachelor</p>
         </div>      
+        <div>
           <h2>github prosjekter</h2>
-            <p_projectDescription_right>prosjektbeskrivelse 1</p_projectDescription_right><br />
-            <p_projectDescription_left>prosjektbeskrivelse 2</p_projectDescription_left>
+          <p_projectDescription_right>prosjektbeskrivelse 1</p_projectDescription_right><br />
+          <p_projectDescription_left>prosjektbeskrivelse 2</p_projectDescription_left>
         </div>
     </div>
 </body>
