added flex-grow style
to html file

--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -22,19 +22,21 @@
     </div>
     <!--columns-->
     <div class="flex-container">
-        <div>
+        <div style="flex-grow:1">
           <h2>kontaktinformasjon</h2>
           <p>sånn kan jeg du få kontakt med meg</p>
         </div>
-        <div>
-          <h2>litt om meg</h2>
-          <p>litt om meg som ikke er om utdanning eller tidligere erfaringer</p>
+        <div style="flex-grow:3">
+            <div>
+              <h2>litt om meg</h2>
+              <p>litt om meg som ikke er om utdanning eller tidligere erfaringer</p>
+            </div>
+            <div>
+              <h2>utdanning og relevant erfaring</h2>
+              <p>Bachelor</p>
+            </div>      
         </div>
-        <div>
-          <h2>utdanning og relevant erfaring</h2>
-          <p>Bachelor</p>
-        </div>      
-        <div>
+        <div style="flex-grow:2">
           <h2>github prosjekter</h2>
           <p_projectDescription_right>prosjektbeskrivelse 1</p_projectDescription_right><br />
           <p_projectDescription_left>prosjektbeskrivelse 2</p_projectDescription_left>
