--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -37,10 +37,11 @@
             </div>      
         </div>
         <div style="flex-grow:2">
-          <h2>github prosjekter</h2>
+          <h2>prosjekter</h2>
           <p_projectDescription_right>prosjektbeskrivelse 1</p_projectDescription_right><br />
           <p_projectDescription_left>prosjektbeskrivelse 2</p_projectDescription_left>
         </div>
     </div>
+    <!--footer-->
 </body>
 </html>
