.css, added new class flex-projects
applied to html sheet for 'prosjekter' heading/column

--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -17,31 +17,40 @@
     <!-- summarization of contact information -->
 
     <!--banner-->
-    <div class="flex-container">
-      <h1>SARA YOHANNES</h1>
-    </div>
-    <!--columns-->
-    <div class="flex-container">
-        <div style="flex-grow:1">
-          <h2>kontaktinformasjon</h2>
-          <p>sånn kan jeg du få kontakt med meg</p>
+    <main>
+        <div class="flex-container">
+            <!--TODO: add banner picture-->
+            <!--TODO: add banner properties-->
+            <h1>SARA YOHANNES</h1>
         </div>
-        <div style="flex-grow:3">
-            <div>
-              <h2>litt om meg</h2>
-              <p>litt om meg som ikke er om utdanning eller tidligere erfaringer</p>
+        <!--columns-->
+        <div class="flex-container">
+            <div style="flex-grow:1">
+                <h2>kontaktinformasjon</h2>
+                <!--TODO: add profile picture-->
+                <p>slik kan jeg du få kontakt med meg</p>
+                <!--TODO: add relevant text and links-->
             </div>
-            <div>
-              <h2>utdanning og relevant erfaring</h2>
-              <p>Bachelor</p>
-            </div>      
+            <div style="flex-grow:3">
+                <div>
+                  <h2>litt om meg</h2>
+                  <p>litt om meg som ikke er om utdanning eller tidligere erfaringer</p>
+                </div>
+                <div>
+                  <h2>utdanning og relevant erfaring</h2>
+                  <p>Bachelor</p>
+                </div>      
+            </div>
+            <div style="flex-grow:2">
+                <h2>prosjekter</h2>
+                <!--TODO: add a css description for project presentation, ie: define illustration placement, project description placement, link to relevant sources placement-->
+                <div class="flex-projects">
+                    <p_projectDescription_right>prosjektbeskrivelse 1</p_projectDescription_right><br />
+                    <p_projectDescription_left>prosjektbeskrivelse 2</p_projectDescription_left>
+                </div>
+            </div>
         </div>
-        <div style="flex-grow:2">
-          <h2>prosjekter</h2>
-          <p_projectDescription_right>prosjektbeskrivelse 1</p_projectDescription_right><br />
-          <p_projectDescription_left>prosjektbeskrivelse 2</p_projectDescription_left>
-        </div>
-    </div>
+    </main>
     <!--footer-->
 </body>
 </html>
