--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -45,8 +45,10 @@
                 <h2>prosjekter</h2>
                 <!--TODO: add a css description for project presentation, ie: define illustration placement, project description placement, link to relevant sources placement-->
                 <div class="flex-projects">
-                    <p_projectDescription_right>prosjektbeskrivelse 1</p_projectDescription_right><br />
-                    <p_projectDescription_left>prosjektbeskrivelse 2</p_projectDescription_left>
+                    <div>
+                        <p_projectDescription_right>prosjektbeskrivelse 1</p_projectDescription_right><br />
+                        <p_projectDescription_left>prosjektbeskrivelse 2</p_projectDescription_left>
+                    </div>
                 </div>
             </div>
         </div>
