--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -26,6 +26,7 @@
         <!--columns-->
         <div class="flex-container">
             <div style="flex-grow:1">
+                <img title="Sara Yohannes" src="self_portrait_2.JPG" alt="Sara Yohannes" width="100" height="150">
                 <h2>kontaktinformasjon</h2>
                 <!--TODO: add profile picture-->
                 <p>slik kan jeg du få kontakt med meg</p>
