html added to project project description
added image to folder and html, made text description inside p_..._right a p

--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -47,7 +47,12 @@
                 <!--TODO: add a css description for project presentation, ie: define illustration placement, project description placement, link to relevant sources placement-->
                 <div class="flex-projects">
                     <div>
-                        <p_projectDescription_right>prosjektbeskrivelse 1</p_projectDescription_right><br />
+                        <p_projectDescription_right>
+                            <img title="example picture" src="Item_light_parafinlampe_UNUSED_v0.png" alt="lantern" width="25" height="75">
+                            <p>
+                                prosjektbeskrivelse 1
+                            </p>
+                        </p_projectDescription_right><br />
                         <p_projectDescription_left>prosjektbeskrivelse 2</p_projectDescription_left>
                     </div>
                 </div>
