--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -53,7 +53,12 @@
                                 prosjektbeskrivelse 1
                             </p>
                         </p_projectDescription_right><br />
-                        <p_projectDescription_left>prosjektbeskrivelse 2</p_projectDescription_left>
+                            <p_projectDescription_left>
+                                <img title="example picture" src="Item_light_parafinlampe_UNUSED_v0.png" alt="lantern" width="25" height="75">
+                                <p>
+                                    prosjektbeskrivelse 2
+                                </p>
+                            </p_projectDescription_left>
                     </div>
                 </div>
             </div>
