--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -18,6 +18,9 @@
 
     <!--banner-->
     <main>
+        <div class="header">
+            <img title="illustration" src="self-portrait_2.JPG" alt="illustration by Sara Yohannes" />
+        </div>
         <div class="flex-container">
             <!--TODO: add banner picture-->
             <!--TODO: add banner properties-->
