update, added css class illu

--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -19,7 +19,9 @@
     <!--banner-->
     <main>
         <div class="header">
-            <img title="illustration" src="self-portrait_2.JPG" alt="illustration by Sara Yohannes" />
+            <div class="illu">
+                <img src="" alt="Alternate Text" /> title="illustration" src="self-portrait_2.JPG" alt="illustration by Sara Yohannes" />
+            </div>
         </div>
         <div class="flex-container">
             <!--TODO: add banner picture-->
