--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -20,7 +20,7 @@
     <main>
         <div class="header">
             <div class="illu">
-                <img src="" alt="Alternate Text" /> title="illustration" src="self-portrait_2.JPG" alt="illustration by Sara Yohannes" />
+                <img title="illustration" src="self-portrait_2.JPG" alt="illustration by Sara Yohannes" />
             </div>
         </div>
         <div class="flex-container">
