--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -19,9 +19,7 @@
     <!--banner-->
     <main>
         <div class="header">
-            <div class="illu">
-                <img title="illustration" src="self-portrait_2.JPG" alt="illustration by Sara Yohannes" />
-            </div>
+            <img title="illustration by Sara Yohannes" src="self-portrait_2.JPG" alt="illustration" />
         </div>
         <div class="flex-container">
             <!--TODO: add banner picture-->
