--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -19,7 +19,7 @@
     <!--banner-->
     <main>
         <div class="header">
-            <img title="illustration by Sara Yohannes" src="self-portrait_2.JPG" alt="illustration" />
+            <!--<img title="illustration by Sara Yohannes" src="self-portrait_2.JPG" alt="illustration" />-->
         </div>
         <div class="flex-container">
             <!--TODO: add banner picture-->
