--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -29,7 +29,7 @@
         <!--columns-->
         <div class="flex-container">
             <div style="flex-grow:1">
-                <pict title="Sara Yohannes" src="self-portrait_2.JPG" alt="Sara Yohannes" width="100" height="150">
+                <pict src="self-portrait_2.JPG" alt="Sara Yohannes" width="100" height="150">
                 <h2>kontaktinformasjon</h2>
                 <!--TODO: add profile picture-->
                 <p>slik kan jeg du få kontakt med meg</p>
