updated html pict class use
moved out of div and added img element to the block

--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -17,7 +17,7 @@
     <!-- summarization of contact information -->
 
     <!--banner-->
-    <pict src="self-portrait_2.JPG" alt="Sara Yohannes" width="100" height="150">
+    <pict> <img src="self-portrait_2.JPG" alt="Sara Yohannes" width="100" height="150"> </pict> 
     <main>
         <div class="header">
             
