--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="frontstylesheet.css" />
 </head>
 <body>
+
     <!-- banner -->
     <!-- left and right border with information -->
     <!-- upper middle box with information about me -->
@@ -15,12 +16,13 @@
     <!-- project banner -->
     <!-- list of projects with links to github and project sites -->
     <!-- summarization of contact information -->
-
     <!--banner-->
-    <pict> <img src="self-portrait_2.JPG" alt="Sara Yohannes" width="100" height="150"> </pict> 
+
+    <!--hover effect on picture, but it changed how lanterns are rendered?-->
+    <pict> <img src="self-portrait_2.JPG" alt="Sara Yohannes" width="100" height="150"> </pict>
     <main>
         <div class="header">
-            
+
         </div>
         <div class="flex-container">
             <!--TODO: add banner picture-->
@@ -37,13 +39,13 @@
             </div>
             <div style="flex-grow:3">
                 <div>
-                  <h2>litt om meg</h2>
-                  <p>litt om meg som ikke er om utdanning eller tidligere erfaringer</p>
+                    <h2>litt om meg</h2>
+                    <p>litt om meg som ikke er om utdanning eller tidligere erfaringer</p>
                 </div>
                 <div>
-                  <h2>utdanning og relevant erfaring</h2>
-                  <p>Bachelor</p>
-                </div>      
+                    <h2>utdanning og relevant erfaring</h2>
+                    <p>Bachelor</p>
+                </div>
             </div>
             <div style="flex-grow:2">
                 <h2>prosjekter</h2>
