--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -1,5 +1,4 @@
 ﻿<!DOCTYPE html>
-
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
@@ -8,68 +7,24 @@
     <link rel="stylesheet" href="frontstylesheet.css" />
 </head>
 <body>
-
-    <!-- banner -->
-    <!-- left and right border with information -->
-    <!-- upper middle box with information about me -->
-    <!-- lower middle box with information about schooling and experience and projects -->
-    <!-- project banner -->
-    <!-- list of projects with links to github and project sites -->
-    <!-- summarization of contact information -->
-    <!--banner-->
-
-    <!--hover effect on picture, but it changed how lanterns are rendered?-->
-    <pict> <img src="self-portrait_2.JPG" alt="Sara Yohannes" width="100" height="150"> </pict>
-    <main>
-        <div class="header">
-
-        </div>
-        <div class="flex-container">
-            <!--TODO: add banner picture-->
-            <!--TODO: add banner properties-->
-            <h1>SARA YOHANNES</h1>
-        </div>
-        <!--columns-->
-        <div class="flex-container">
-            <div style="flex-grow:1">
-                <h2>kontaktinformasjon</h2>
-                <!--TODO: add profile picture-->
-                <p>slik kan jeg du få kontakt med meg</p>
-                <!--TODO: add relevant text and links-->
-            </div>
-            <div style="flex-grow:3">
-                <div>
-                    <h2>litt om meg</h2>
-                    <p>litt om meg som ikke er om utdanning eller tidligere erfaringer</p>
-                </div>
-                <div>
-                    <h2>utdanning og relevant erfaring</h2>
-                    <p>Bachelor</p>
-                </div>
-            </div>
-            <div style="flex-grow:2">
-                <h2>prosjekter</h2>
-                <!--TODO: add a css description for project presentation, ie: define illustration placement, project description placement, link to relevant sources placement-->
-                <div class="flex-projects">
-                    <div>
-                        <p_projectDescription_right>
-                            <img title="example picture" src="Item_light_parafinlampe_UNUSED_v0.png" alt="lantern" width="25" height="75">
-                            <p>
-                                prosjektbeskrivelse 1
-                            </p>
-                        </p_projectDescription_right>
-                        <p_projectDescription_left>
-                            <img title="example picture" src="Item_light_parafinlampe_UNUSED_v0.png" alt="lantern" width="25" height="75">
-                            <p>
-                                prosjektbeskrivelse 2
-                            </p>
-                        </p_projectDescription_left>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </main>
-    <!--footer-->
+    <!---->
+    <!--header - blue-->
+    <!--header: banner picture-->
+    <header>
+        <p>HEADER</p>
+    </header>
+    <!--columns - green-->
+    <column>
+        <p>COLUMN</p>
+    </column>
+    <!--column 1, spring green, contact information (portrait, phone number, mail which opens and lets user start writing me a mail at once)-->
+    <!--column 2, olive, information (about me), (relevant education and experience)-->
+    <!--column 3, emerald green, github projects-->
+    <!--footer - red-->
+    <footer>
+        <p>FOOTER</p>
+    </footer>
+    <!--quick links to other places than github (art), (itchio or similar)-->
+    <!---->
 </body>
 </html>
