--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -10,9 +10,11 @@
     <!---->
     <!--header - blue-->
     <!--header: banner picture-->
-    <header>
-        <p>HEADER</p>
-    </header>
+    <div>
+        <header>
+            <p>HEADER</p>
+        </header>
+    </div>
     <!--columns - green-->
     <column>
         <p>COLUMN</p>
