--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -11,9 +11,9 @@
     <!--header - blue-->
     <!--header: banner picture-->
     <div>
-        <header>
+        <htop>
             <p>HEADER</p>
-        </header>
+        </htop>
     </div>
     <!--columns - green-->
     <column>
