--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -10,10 +10,8 @@
     <!---->
     <!--header - blue-->
     <!--header: banner picture-->
-    <div>
-        <htop>
-            <p>HEADER</p>
-        </htop>
+    <div class="htop">
+        <p>HEADER</p>
     </div>
     <!--columns - green-->
     <column>
