added proper syntax
added classes with the proper syntax to div class=""

--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -14,16 +14,16 @@
         <p>HEADER</p>
     </div>
     <!--columns - green-->
-    <column>
+    <div class="column">
         <p>COLUMN</p>
-    </column>
+    </div>
     <!--column 1, spring green, contact information (portrait, phone number, mail which opens and lets user start writing me a mail at once)-->
     <!--column 2, olive, information (about me), (relevant education and experience)-->
     <!--column 3, emerald green, github projects-->
     <!--footer - red-->
-    <footer>
+    <div class="footer">
         <p>FOOTER</p>
-    </footer>
+    </div>
     <!--quick links to other places than github (art), (itchio or similar)-->
     <!---->
 </body>
