--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -15,7 +15,13 @@
     </div>
     <!--columns - green-->
     <div class="column">
-        <p>COLUMN</p>
+        <p>COLUMN: Contact information</p>
+    </div>
+    <div class="column">
+        <p>COLUMN: Information</p>
+    </div>
+    <div class="column">
+        <p>COLUMN: Projects information</p>
     </div>
     <!--column 1, spring green, contact information (portrait, phone number, mail which opens and lets user start writing me a mail at once)-->
     <!--column 2, olive, information (about me), (relevant education and experience)-->
