--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -14,18 +14,18 @@
         <p>HEADER</p>
     </div>
     <!--columns - green-->
-    <div class="column">
+    <div class="column.contact-info">
+    <!--column 1, spring green, contact information (portrait, phone number, mail which opens and lets user start writing me a mail at once)-->
         <p>COLUMN: Contact information</p>
     </div>
-    <div class="column">
+    <div class="column.aboutme-info">
+    <!--column 2, olive, information (about me), (relevant education and experience)-->
         <p>COLUMN: Information</p>
     </div>
-    <div class="column">
+    <div class="column.project-info">
+    <!--column 3, emerald green, github projects-->
         <p>COLUMN: Projects information</p>
     </div>
-    <!--column 1, spring green, contact information (portrait, phone number, mail which opens and lets user start writing me a mail at once)-->
-    <!--column 2, olive, information (about me), (relevant education and experience)-->
-    <!--column 3, emerald green, github projects-->
     <!--footer - red-->
     <div class="footer">
         <p>FOOTER</p>
