--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -14,7 +14,7 @@
         <p>HEADER</p>
     </div>
     <!--columns - green-->
-    <div class="column.contact-info">
+    <div class="contact-info">
     <!--column 1, spring green, contact information (portrait, phone number, mail which opens and lets user start writing me a mail at once)-->
         <p>COLUMN: Contact information</p>
     </div>
