--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -14,15 +14,15 @@
         <p>HEADER</p>
     </div>
     <!--columns - green-->
-    <div class="contact-info">
+    <div class="column contact-info">
     <!--column 1, spring green, contact information (portrait, phone number, mail which opens and lets user start writing me a mail at once)-->
         <p>COLUMN: Contact information</p>
     </div>
-    <div class="column.aboutme-info">
+    <div class="column aboutme-info">
     <!--column 2, olive, information (about me), (relevant education and experience)-->
         <p>COLUMN: Information</p>
     </div>
-    <div class="column.project-info">
+    <div class="column project-info">
     <!--column 3, emerald green, github projects-->
         <p>COLUMN: Projects information</p>
     </div>
