--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -13,18 +13,20 @@
     <div class="htop">
         <p>HEADER</p>
     </div>
-    <!--columns - green-->
-    <div class="column contact-info":1>
-    <!--column 1, spring green, contact information (portrait, phone number, mail which opens and lets user start writing me a mail at once)-->
-        <p>COLUMN: Contact information</p>
-    </div>
-    <div class="column aboutme-info":3>
-    <!--column 2, olive, information (about me), (relevant education and experience)-->
-        <p>COLUMN: Information</p>
-    </div>
-    <div class="column project-info":2>
-    <!--column 3, emerald green, github projects-->
-        <p>COLUMN: Projects information</p>
+    <div class="column">
+        <!--columns - green-->
+        <div class="column contact-info":1>
+        <!--column 1, spring green, contact information (portrait, phone number, mail which opens and lets user start writing me a mail at once)-->
+            <p>COLUMN: Contact information</p>
+        </div>
+        <div class="column aboutme-info":3>
+        <!--column 2, olive, information (about me), (relevant education and experience)-->
+            <p>COLUMN: Information</p>
+        </div>
+        <div class="column project-info":2>
+        <!--column 3, emerald green, github projects-->
+            <p>COLUMN: Projects information</p>
+        </div>
     </div>
     <!--footer - red-->
     <div class="footer">
