--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -15,15 +15,15 @@
     </div>
     <div class="column">
         <!--columns - green-->
-        <div class="column contact-info":1>
+        <div class="column contact-info" style="flex-grow: 1">
         <!--column 1, spring green, contact information (portrait, phone number, mail which opens and lets user start writing me a mail at once)-->
             <p>COLUMN: Contact information</p>
         </div>
-        <div class="column aboutme-info":3>
+        <div class="column aboutme-info" style="flex-grow: 3">
         <!--column 2, olive, information (about me), (relevant education and experience)-->
             <p>COLUMN: Information</p>
         </div>
-        <div class="column project-info":2>
+        <div class="column project-info" style="flex-grow: 2">
         <!--column 3, emerald green, github projects-->
             <p>COLUMN: Projects information</p>
         </div>
