added workspace to html

--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -18,7 +18,9 @@
         <!--columns - green-->
         <div class="column contact-info" style="flex-grow: 1">
         <!--column 1, spring green, contact information (portrait, phone number, mail which opens and lets user start writing me a mail at once)-->
-            <p>COLUMN: Contact information</p>
+            <div class="column contact-info work-space">
+                <p>COLUMN: Contact information</p>
+            </div>
         </div>
         <div class="column aboutme-info" style="flex-grow: 4">
         <!--column 2, olive, information (about me), (relevant education and experience)-->
