--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -18,7 +18,7 @@
         <!--columns - green-->
         <div class="column contact-info" style="flex-grow: 1">
         <!--column 1, spring green, contact information (portrait, phone number, mail which opens and lets user start writing me a mail at once)-->
-            <div class="column contact-info work-space">
+            <div class="work-space">
                 <p>COLUMN: Contact information</p>
             </div>
         </div>
