--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -19,6 +19,10 @@
         <div class="column contact-info" style="flex-grow: 1">
         <!--column 1, spring green, contact information (portrait, phone number, mail which opens and lets user start writing me a mail at once)-->
             <div class="work-space">
+                <div class="illustration">
+                    <!--picture-->
+                    <img src="self-portrait_2.JPG" alt="Portrait of Sara Yohannes" />
+                </div>
                 <p>COLUMN: Contact information</p>
             </div>
         </div>
