added width and height manually

--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -21,7 +21,7 @@
             <div class="work-space">
                 <div class="illustration">
                     <!--picture-->
-                    <img src="self-portrait_2.JPG" alt="Portrait of Sara Yohannes" />
+                    <img src="self-portrait_2.JPG" alt="Portrait of Sara Yohannes" width="150" height="200"/>
                 </div>
                 <p>COLUMN: Contact information</p>
             </div>
