--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -19,10 +19,8 @@
         <div class="column contact-info" style="flex-grow: 1">
         <!--column 1, spring green, contact information (portrait, phone number, mail which opens and lets user start writing me a mail at once)-->
             <div class="work-space">
-                <!--<div class="illustration">-->
-                    <!--picture-->
-                    <img src="self-portrait_2.JPG" alt="Portrait of Sara Yohannes" width="150" height="200"/>
-                <!--</div>-->
+                <!--picture-->
+                <img src="self-portrait_2.JPG" alt="Portrait of Sara Yohannes" <!--width="150" height="200"-->/>
                 <p>COLUMN: Contact information</p>
             </div>
         </div>
