--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -20,7 +20,9 @@
         <!--column 1, spring green, contact information (portrait, phone number, mail which opens and lets user start writing me a mail at once)-->
             <div class="work-space">
                 <!--picture-->
-                <div class="illustration" style="min-width:100px">src="self-portrait_2.JPG" alt="Portrait of Sara Yohannes"</div><!--width="150" height="200"-->
+                <div class="illustration" style="min-width:100px">
+                    <img src="self-portrait_2.JPG" alt="Portrait of Sara Yohannes" />
+                </div><!--width="150" height="200"-->
                 <p>COLUMN: Contact information</p>
             </div>
         </div>
