added width to img properties
100

--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -20,8 +20,8 @@
         <!--column 1, spring green, contact information (portrait, phone number, mail which opens and lets user start writing me a mail at once)-->
             <div class="work-space">
                 <!--picture-->
-                <div class="illustration" style="min-width:100px">
-                    <img src="self-portrait_2.JPG" alt="Portrait of Sara Yohannes" />
+                <div class="illustration">
+                    <img src="self-portrait_2.JPG" alt="Portrait of Sara Yohannes" width="100"/>
                 </div><!--width="150" height="200"-->
                 <p>COLUMN: Contact information</p>
             </div>
