added class self-portrait as values for picture

--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -21,8 +21,9 @@
             <div class="work-space">
                 <!--picture-->
                 <div class="illustration">
-                    <img src="self-portrait_2.JPG" alt="Portrait of Sara Yohannes" width="100"/>
-                </div><!--width="150" height="200"-->
+                    <img src="self-portrait_2.JPG" class="self-portrait"/>
+                </div>
+                <!--information-->
                 <p>COLUMN: Contact information</p>
             </div>
         </div>
