added banner class to css and added some html in htop

--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -12,6 +12,9 @@
     <!--header - blue-->
     <!--header: banner picture-->
     <div class="htop">
+        <div class="illustration">
+            <img ser="" alt="Banner by Sara Yohannes" class="banner" />
+        </div>
         <p>HEADER</p>
     </div>
     <div class="column">
