--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -13,7 +13,7 @@
     <!--header: banner picture-->
     <div class="htop">
         <div class="illustration">
-            <img src="self-portrait_2.JPG" alt="Banner by Sara Yohannes" class="banner" width="1920"/>
+            <img src="self-portrait_2.JPG" alt="Banner by Sara Yohannes" class="banner"/>
         </div>
         <p>HEADER</p>
     </div>
