--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -23,9 +23,9 @@
         <!--column 1, spring green, contact information (portrait, phone number, mail which opens and lets user start writing me a mail at once)-->
             <div class="work-space">
                 <!--picture-->
-                <div class="illustration">
                     <img src="self-portrait_2.JPG" class="self-portrait"/>
-                </div>
+                <!--<div class="illustration">
+                </div>-->
                 <!--information-->
                 <p>COLUMN: Contact information</p>
             </div>
