removed banner from out of illustration class html

--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -12,9 +12,9 @@
     <!--header - blue-->
     <!--header: banner picture-->
     <div class="htop">
-        <div class="illustration">
-            <img src="self-portrait_2.JPG" alt="Banner by Sara Yohannes" class="banner"/>
-        </div>
+        <img src="self-portrait_2.JPG" alt="Banner by Sara Yohannes" class="banner"/>
+        <!--<div class="illustration">
+        </div>-->
         <p>HEADER</p>
     </div>
     <div class="column">
