--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -17,7 +17,7 @@
     </div>
     <div class="column">
         <!--columns - green-->
-        <div class="column contact-info" style="flex-grow: 1">
+        <div class="column contact-info">
         <!--column 1, spring green, contact information (portrait, phone number, mail which opens and lets user start writing me a mail at once)-->
             <div class="work-space">
                 <!--picture-->
