update, html contact-info
marked up and seprated column for adding information

--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -12,8 +12,7 @@
     <!--header - blue-->
     <!--header: banner picture-->
     <div class="htop">
-        <img src="self-portrait_2.JPG" alt="Banner by Sara Yohannes" class="banner"/>
-        <p>HEADER</p>
+       <p>HEADER</p>
     </div>
     <div class="column">
         <!--columns - green-->
@@ -23,7 +22,10 @@
                 <!--picture-->
                 <img src="self-portrait_2.JPG" class="self-portrait"/>
                 <!--information-->
-                <p>COLUMN: Contact information</p>
+                <h3>Phone:</h3>
+                <p>number</p>
+                <h3>Mail:</h3>
+                <p>mail@mail.com</p>
             </div>
         </div>
         <div class="column aboutme-info" style="flex-grow: 3">
