added content-space class into html structure
and made the colors 'pretty'

--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -18,23 +18,30 @@
         <!--columns - green-->
         <div class="column contact-info">
         <!--column 1, spring green, contact information (portrait, phone number, mail which opens and lets user start writing me a mail at once)-->
-            <div class="work-space">
+            <div class="content-space">
                 <!--picture-->
                 <img src="self-portrait_2.JPG" class="self-portrait"/>
                 <!--information-->
-                <h3>Phone:</h3>
+                <h3>PHONE</h3>
                 <p>number</p>
-                <h3>Mail:</h3>
+                <h3>MAIL</h3>
                 <p>mail@mail.com</p>
             </div>
         </div>
-        <div class="column aboutme-info" style="flex-grow: 3">
+        <div class="column aboutme-info">
         <!--column 2, olive, information (about me), (relevant education and experience)-->
-            <p>COLUMN: Information</p>
+            <div class="content-space">
+                <h3>ABOUT ME</h3>
+                <p>Information</p>
+                <h3>RELEVANT EDUCATION</h3>
+                <p>Information</p>
+            </div>
         </div>
-        <div class="column project-info" style="flex-grow: 2">
+        <div class="column project-info">
         <!--column 3, emerald green, github projects-->
-            <p>COLUMN: Projects information</p>
+            <div class="content-space">
+                <p>COLUMN: Projects information</p>
+            </div>
         </div>
     </div>
     <!--footer - red-->
