added text-boxes class
for adding information and controling how their children appear in the content-space

--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -22,10 +22,12 @@
                 <!--picture-->
                 <img src="self-portrait_2.JPG" class="self-portrait"/>
                 <!--information-->
-                <h3>PHONE</h3>
-                <p>number</p>
-                <h3>MAIL</h3>
-                <p>mail@mail.com</p>
+                <div class="text-boxes">
+                    <h3>PHONE</h3>
+                    <p>number</p>
+                    <h3>MAIL</h3>
+                    <p>mail@mail.com</p>
+                </div>
             </div>
         </div>
         <div class="column aboutme-info">
