added text-boxes to the structure

--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -33,16 +33,20 @@
         <div class="column aboutme-info">
         <!--column 2, olive, information (about me), (relevant education and experience)-->
             <div class="content-space">
-                <h3>ABOUT ME</h3>
-                <p>Information</p>
-                <h3>RELEVANT EDUCATION</h3>
-                <p>Information</p>
+                <div class="text-boxes">
+                    <h3>ABOUT ME</h3>
+                    <p>Information</p>
+                    <h3>RELEVANT EDUCATION</h3>
+                    <p>Information</p>
+                </div>
             </div>
         </div>
         <div class="column project-info">
         <!--column 3, emerald green, github projects-->
             <div class="content-space">
-                <p>COLUMN: Projects information</p>
+                <div class="text-boxes">
+                    <p>COLUMN: Projects information</p>
+                </div>
             </div>
         </div>
     </div>
