--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -15,9 +15,8 @@
        <p>HEADER</p>
     </div>
     <div class="column">
-        <!--columns - green-->
+        <!--columns - contact info-->
         <div class="column contact-info">
-        <!--column 1, spring green, contact information (portrait, phone number, mail which opens and lets user start writing me a mail at once)-->
             <div class="content-space">
                 <!--picture-->
                 <img src="self-portrait_2.JPG" class="self-portrait"/>
@@ -30,8 +29,8 @@
                 </div>
             </div>
         </div>
+        <!--column 2 - about me-->
         <div class="column aboutme-info">
-        <!--column 2, olive, information (about me), (relevant education and experience)-->
             <div class="content-space">
                 <div class="text-boxes">
                     <h3>ABOUT ME</h3>
@@ -41,8 +40,8 @@
                 </div>
             </div>
         </div>
+        <!--column 3 - github projects-->
         <div class="column project-info">
-        <!--column 3, emerald green, github projects-->
             <div class="content-space">
                 <div class="text-boxes">
                     <p>COLUMN: Projects information</p>
@@ -55,6 +54,6 @@
         <p>FOOTER</p>
     </div>
     <!--quick links to other places than github (art), (itchio or similar)-->
-    <!---->
+    <!-- -->
 </body>
 </html>
