--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -19,13 +19,15 @@
         <div class="column contact-info">
             <div class="content-space">
                 <!--picture-->
-                <img src="self-portrait_2.JPG" class="self-portrait"/>
+                <img src="self-portrait_2.JPG" class="self-portrait" />
                 <!--information-->
                 <div class="text-boxes">
                     <h3>PHONE</h3>
                     <p>number</p>
-                    <h3>MAIL</h3>
-                    <p>mail@mail.com</p>
+                </div>
+                <div class="text-boxes">
+                <h3>MAIL</h3>
+                <p>mail@mail.com</p>
                 </div>
             </div>
         </div>
@@ -35,6 +37,8 @@
                 <div class="text-boxes">
                     <h3>ABOUT ME</h3>
                     <p>Information</p>
+                </div>
+                <div class="text-boxes">
                     <h3>RELEVANT EDUCATION</h3>
                     <p>Information</p>
                 </div>
