test text boxes

--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -25,9 +25,10 @@
                     <h3>PHONE</h3>
                     <p>number</p>
                 </div>
+                <!--information-->
                 <div class="text-boxes">
-                <h3>MAIL</h3>
-                <p>mail@mail.com</p>
+                    <h3>MAIL</h3>
+                    <p>mail@mail.com</p>
                 </div>
             </div>
         </div>
