--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -56,7 +56,11 @@
     </div>
     <!--footer - red-->
     <div class="footer">
-        <p>FOOTER</p>
+        <div class="column">
+            <p>link to github</p>
+            <p>link to sketchfab?</p>
+            <p>link to deviantart?</p>
+        </div>
     </div>
     <!--quick links to other places than github (art), (itchio or similar)-->
     <!-- -->
