update html, added text-boxes

--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -51,6 +51,15 @@
                 <div class="text-boxes">
                     <p>COLUMN: Projects information</p>
                 </div>
+                <div class="text-boxes">
+                    <p>project 1</p>
+                </div>
+                <div class="text-boxes">
+                    <p>project 2</p>
+                </div>
+                <div class="text-boxes">
+                    <p>project 3</p>
+                </div>
             </div>
         </div>
     </div>
