added img to html, project-illustration class

--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -52,6 +52,7 @@
                     <p>COLUMN: Projects information</p>
                 </div>
                 <div class="text-boxes">
+                        <img src="Item_light_parafinlampe_UNUSED_v0.PNG" class="project-illustration" />
                     <p>project 1</p>
                 </div>
                 <div class="text-boxes">
