--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -52,8 +52,10 @@
                     <p>COLUMN: Projects information</p>
                 </div>
                 <div class="text-boxes">
+                    <div class="column">
                     <img src="Item_light_parafinlampe_UNUSED_v0.PNG" class="project-illustration" />
                     <p>project 1</p>
+                    </div>
                 </div>
                 <div class="text-boxes">
                     <img src="Item_light_parafinlampe_UNUSED_v0.PNG" class="project-illustration" />
