added h3, and p to 'text-box' to column

--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -54,16 +54,29 @@
                 <div class="text-boxes">
                     <div class="column">
                     <img src="Item_light_parafinlampe_UNUSED_v0.PNG" class="project-illustration" />
-                    <p>project 1</p>
+                    <div class="text-boxes">
+                        <h3>Name of project (one)</h3>
+                        <p>Description of project with link...</p>
+                    </div>
                     </div>
                 </div>
                 <div class="text-boxes">
-                    <img src="Item_light_parafinlampe_UNUSED_v0.PNG" class="project-illustration" />
-                    <p>project 2</p>
+                    <div class="column">
+                        <img src="Item_light_parafinlampe_UNUSED_v0.PNG" class="project-illustration" />
+                        <div class="text-boxes">
+                            <h3>Name of project (two)</h3>
+                            <p>Description of project with link...</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="text-boxes">
-                    <img src="Item_light_parafinlampe_UNUSED_v0.PNG" class="project-illustration" />
-                    <p>project 3</p>
+                    <div class="column">
+                        <img src="Item_light_parafinlampe_UNUSED_v0.PNG" class="project-illustration" />
+                        <div class="text-boxes">
+                            <h3>Name of project (three)</h3>
+                            <p>Description of project with link...</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
