added text-boxes to footer column

--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -84,9 +84,15 @@
     <!--footer - red-->
     <div class="footer">
         <div class="column">
-            <p>link to github</p>
-            <p>link to sketchfab?</p>
-            <p>link to deviantart?</p>
+            <div class="text-boxes">
+                <p>github</p>
+            </div>
+            <div class="text-boxes">
+                <p>sketchfab?</p>
+            </div>
+            <div class="text-boxes">
+                <p>deviantart?</p>
+            </div>
         </div>
     </div>
     <!--quick links to other places than github (art), (itchio or similar)-->
