--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -73,7 +73,7 @@
                     <div class="column">
                         <img src="Item_light_parafinlampe_UNUSED_v0.PNG" class="project-illustration" />
                         <div class="text-boxes">
-                            <h3>Name of project (three)</h3>
+                            <h3>A super long name of this fantastic project (three)</h3>
                             <p>Description of project with link...</p>
                         </div>
                     </div>
