added hyperlink to footer

--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -85,7 +85,7 @@
     <div class="footer">
         <div class="column">
             <div class="text-boxes">
-                <p>github</p>
+                <p>This is a <a href="https://github.com/SaraYohannes" target="_blank">github link</a></p>
             </div>
             <div class="text-boxes">
                 <p>sketchfab?</p>
