added flex elements to footer

--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -88,10 +88,10 @@
                 <p>This is a <a href="https://github.com/SaraYohannes" target="_blank">github link</a></p>
             </div>
             <div class="text-boxes">
-                <p>sketchfab?</p>
+                <p>This is a sketchfab link?</p>
             </div>
             <div class="text-boxes">
-                <p>deviantart?</p>
+                <p>This is a deviantart link?</p>
             </div>
         </div>
     </div>
