--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -83,7 +83,7 @@
     </div>
     <!--footer - red-->
     <div class="footer">
-        <div class="column" style="align-items:center">
+        <div class="column" style="justify-content: center">
             <div class="text-boxes">
                 <p>This is a <a href="https://github.com/SaraYohannes" target="_blank">github link</a></p>
             </div>
